# major-project

./: .gitignore  README.md  SETUP_GUIDE.md  drizzle.config.ts  package-lock.json  package.json
app/: globals.css  page.tsx
app/api/allocation/allocate-seats/: route.ts
app/api/branches/: route.ts
app/api/branches/[id]/: route.ts
app/api/branches/bulk-upload/: route.ts
app/api/rooms/: route.ts
app/api/rooms/[id]/: route.ts
app/api/seating-plans/: route.ts
app/api/students/: route.ts
app/api/subjects/: route.ts
app/branches/: page.tsx
app/rooms/: page.tsx
backend/: alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0722021b81e1_initial_migration_with_class_and_room_.py  add_seating_plans_table.py  add_subjects_table.py  branch_code_as_primary_key.py  migration_to_normalized_schema.py  remove_year_from_students.py  rename_columns_to_id.py  room_number_as_primary_key.py
backend/api/: database.py  models.py  schema.py
backend/api/routers/: allocation.py  branches.py  classes.py  room.py  seating_plans.py  students.py  subjects.py
components/: Card.tsx  DataFormatModal.tsx  Header.tsx
db/: index.ts  schema.ts
drizzle/: 0000_petite_anthem.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/allocations/: CreatePlanModal.tsx  page.tsx
frontend/app/students/: page.tsx
frontend/app/subjects/: page.tsx
frontend/components/: Button.tsx  Sidebar.tsx
lib/: config.ts
(+10 files in other folders)
