[project]
name = "seat-allocation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[all]>=0.122.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
